download catalog activity

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,6 +14,7 @@
     <string name="confirm">Confirmar</string>
     <string name="exiting">Realmente desea Salir?</string>
     <string name="downloading">Descargar toda la info del servidor? Esta operacion descarta toda la informacion actual en el dispositivo</string>
+    <string name="downloadingcat">Descargar todos los catalogos del servidor? Esta operacion modifica los catalogos actuales en el dispositivo</string>
     <string name="uploading">Enviar toda la info al servidor?</string>
     <string name="desc_barcode">Escanear código de barras</string>
     <string name="parametro">Parámetro de búsqueda</string>
