Correcciones Encuesta casa Encuesta datos parto bb parte 1 Menu Participantes

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -63,5 +63,7 @@
     
     <string name="gpstitle">Configuración GPS</string>
     <string name="gpsquestion">El GPS no está habilitado. Quiere ir al menú de configuración y activarlo?</string>
+
+    <string name="edad">Edad</string>
     
 </resources>
