--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -22,6 +22,7 @@
     <string name="ok">Aceptar</string>
     <string name="cancel">Cancelar</string>
     <string name="edit">Editar</string>
+    <string name="delete">Quitar</string>
     <string name="add">Agregar</string>
     <string name="select">Seleccionar</string>
     <string name="enter">Ingresar</string>
