--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -86,7 +86,20 @@
     <string name="title_connecting">conectando..</string>
     <string name="title_connected_to">Conectado a <xliff:g id="device_name">%1$s</xliff:g></string>
     <string name="connected_to">Conectado a </string>
+    <string name="send_to">Enviar a ..</string>
     <string name="title_not_connected">No conectado</string>
+    
+    <string name="send_request">Enviar solicitud</string>
+    <string name="accept_request">Aceptar solicitud</string>
+    <string name="request_sent">Le solicita recibir datos..</string>
+    <string name="request_accepted">La solicitud fue aceptada</string>
+    <string name="waiting_data">Esperando datos..</string>
+    <string name="sending_data">Enviando datos..</string>
+    <string name="receiving_data">Recibiendo datos..</string>
+    <string name="receiving">Recibiendo </string>
+    <string name="finished">Finalizado </string>
+    <string name="select_house">Seleccionar casa</string>
+    <string name="house_selected">Casa seleccionada <xliff:g id="codigo_casa">%1$s</xliff:g></string>
 
     <!--  DeviceListActivity -->
     <string name="scanning">Buscando dispositivos..</string>
