--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -101,7 +101,10 @@
     <string name="receiving">Recibiendo </string>
     <string name="finished">/*Proceso finalizado*/</string>
     <string name="finished_house">/*Terminado casa*/</string>
-    <string name="finished_part">/*Terminado participante*/</string>
+    <string name="start_part">/*Enviar participante*/</string>
+    <string name="finished_part">/*Terminado participantes*/</string>
+    <string name="start_partsa">/*Enviar participante seroprevalencia*/</string>
+    <string name="finished_partsa">/*Terminado participantes seroprevalencia*/</string>
     <string name="select_house">Seleccionar casa</string>
     <string name="house_selected">Casa seleccionada <xliff:g id="codigo_casa">%1$s</xliff:g></string>
     <string name="participant_selected">Participante seleccionado <xliff:g id="codigo_part">%1$s</xliff:g></string>
