-PIN de verificación de descarga debe ser obligatorio -Se descomenta linea de código que se comentó durante pruebas en revisión de datos: Muestras

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -130,5 +130,5 @@
     <!-- Descargar data -->
     <string name="enter_pin_download">Ingresar PIN de autorización para descargar datos</string>
     <string name="pin_error">PIN inválido!</string>
-    
+    <string name="pin_required">Debe ingresar PIN</string>
 </resources>
