- Quitar opción Visita Final del combo en ingreso de visitas de seguimiento - Al compartir datos bluetooth también enviar procesos y seguimiento del participante - Agregar participante en seguimiento, desde el menu de "casa caso" se puede tamizar un participante y de inmediato quedar en seguimiento. - Varios positivos en la misma casa en el mismo seguimiento, para los positivos tomar fif si es menor a la fecha de ingreso, para el resto tomar la fecha de ingreso como fecha mínima para registro de sintomas, fiebre y contacto.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -109,6 +109,10 @@
     <string name="finished_part">/*Terminado participantes*/</string>
     <string name="start_partsa">/*Enviar participante seroprevalencia*/</string>
     <string name="finished_partsa">/*Terminado participantes seroprevalencia*/</string>
+    <string name="start_partproc">/*Enviar participante procesos*/</string>
+    <string name="finished_partproc">/*Terminado procesos*/</string>
+    <string name="start_partcasos">/*Enviar casos participante*/</string>
+    <string name="finished_partcasos">/*Terminado casos*/</string>
     <string name="select_house">Seleccionar casa</string>
     <string name="house_selected">Casa seleccionada <xliff:g id="codigo_casa">%1$s</xliff:g></string>
     <string name="participant_selected">Participante seleccionado <xliff:g id="codigo_part">%1$s</xliff:g></string>
