--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="app_name">Estudios ICS</string>
     <string name="main_header">Estudios de Investigación</string>
     <string name="desc_logo">Instituto de Ciencias Sostenibles</string>
+    <string name="apk_name">estudios-ics-app.apk</string>
+    <string name="url_apk">http://192.168.1.98:8080/estudios-ics/resources/apk/estudios-ics-app.apk</string>
     
     <string name="success">Operación exitosa!</string>
     <string name="error">Ha ocurrido un error!</string>
@@ -137,4 +139,6 @@
     <string name="enter_pin_download">Ingresar PIN de autorización para descargar datos</string>
     <string name="pin_error">PIN inválido!</string>
     <string name="pin_required">Debe ingresar PIN</string>
+
+    <string name="downloadingApp">Descargando..</string>
 </resources>
