Versión 6.0.0.1 Mejoras y correcciones consentimientos MA2022

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,8 +5,7 @@
     <string name="main_header">Estudios de Investigación</string>
     <string name="desc_logo">Instituto de Ciencias Sostenibles</string>
     <string name="apk_name">estudios-ics-app.apk</string>
-    <!--<string name="url_apk">http://192.168.1.98:8080/estudios-ics/resources/apk/estudios-ics-app.apk</string>-->
-    <string name="url_apk">http://192.168.0.13:8080/estudios-ics/resources/apk/estudios-ics-app.apk</string>
+    <string name="url_apk">http://192.168.1.98:8080/estudios-ics/resources/apk/estudios-ics-app.apk</string>
     
     <string name="success">Operación exitosa!</string>
     <string name="error">Ha ocurrido un error!</string>
@@ -62,6 +61,7 @@
     <string name="data_not_sent">Hay datos sin enviar en el equipo, estos datos se borrarán si continúa. Aún desea descargar la información del servidor?</string>
     <string name="wipe_db_confirm">Al marcar esta opción borrará la base de datos del equipo, los datos almacenados se borrarán si continúa. Aún desea marcar esta opción?</string>
     <string name="error_wipe_db_super">No tiene el rol necesario para limpiar base de datos</string>
+    <string name="processes_not_sent">Hay procesos sin enviar en el equipo, favor enviar datos antes de descargar procesos del servidor</string>
     <string name="next">Siguiente</string>
     <string name="prev">Previo</string>
     <string name="finish">Finalizar</string>
