Versión 6.1.7.1 - Para muestras PBMC seguimiento familia, si también pertenece a UO1, debe usarse el volumen UO1. "Si un niño es estudio UO1 y Cohorte familia  Y  sale positivo ya sea él o algún miembro de la casa se le toma muestra respetando el volumen de UO1 de acuerdo a edades" - Al momento de subir datos (en cualquiera de las opciones) si no hay ningún dato a enviar, se mostrará el mensaje "No hay información a enviar!" en lugar del mensaje de operación exitosa.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="downloading">Descargar toda la info del servidor? Esta operacion descarta toda la informacion actual en el dispositivo</string>
     <string name="downloadingcat">Descargar todos los catalogos del servidor? Esta operacion modifica los catalogos actuales en el dispositivo</string>
     <string name="uploading">Enviar toda la info al servidor?</string>
+    <string name="no_data_to_send">No hay información a enviar!</string>
     <string name="desc_barcode">Escanear código de barras</string>
     <string name="parametro">Parámetro de búsqueda</string>
     <string name="method">Método:</string>
