--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -146,4 +146,7 @@
 
     <!-- Encuesta de satisfacción -->
     <string name="pregunta1"><font color="#000000">¿Qué le motivó a Ud. ingresar a su hijo/a en el proyecto ?</font><font color="#DF36OC"> Puede seleccionar más de una respuesta, e indique su nivel de conformidad a cada opción.</font></string>
+
+    <!-- Escanner -->
+    <string name="escanner">Escanee el código</string>
 </resources>
